# molisanax

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  mkdocs.yml  myst.yml  pyproject.toml
.claude/agents/: explore.md  librarian.md  metis.md  momus.md  multimodal-looker.md  oracle.md
.github/workflows/: docs-myst.yml  docs.yml
docs/: api.md  getting_started.ipynb  implementation_plan.md  myst-requirements.txt  project_plan.md  project_status.md  requirements.txt  tutorial.ipynb
docs/_sphinx/: api.rst  conf.py  forcing.rst  geo.rst  index.rst  interpolation.rst  metric.rst  metrics.rst  safe_math.rst  score.rst  solver.rst
docs/_static/: collapse-cells.js  custom.css  mathjax-config.js  myst-extra.css  pastax_logo.py
src/molisanax/: __init__.py  _safe_math.py  _types.py  forcing.py  geo.py  grid.py  interpolation.py  metrics.py  score.py  solver.py
src/pastax/: forcing.py  geo.py  grid.py  metric.py  score.py  solver.py
tests/: test_forcing.py  test_geo.py  test_grid.py  test_interpolation.py  test_mask.py  test_metric.py  test_metrics.py  test_safe_math.py  test_score.py  test_solver.py  test_velocity_interp.py
